# lomi.

./: .cursorrules  .env.example  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Instruction-N-001-01-2024.md  LICENSE  OPEN-LICENSE  README.md  SECURITY.md  bundle-analysis.html  bunfig.toml  data-table-for-integrations-providers.sql  database.types.ts  dope-seed.sql  generate_sitemap.py  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts  wave-api-aggregator.txt  wave-api-reference.txt  wave-api-webhook.txt
.husky/: pre-commit
apps/cli/: .gitignore  Cargo.toml  README.md  RELEASE.md  package.json  pnpm-lock.yaml
apps/cli/homebrew/: lomi.rb
apps/cli/npm/: README.md  install.js  package.json
apps/cli/rules/: api-reference.md  charges.md  checkout-sessions.md  embed-checkout.md  llms.txt  manifest.json  payment-intents.md  sdk-basics.md  subscriptions.md  webhooks.md
apps/cli/scripts/: bump-version.sh  generate-rules.sh  smoke-test.sh  update-homebrew-sha256.sh
apps/cli/src/: main.rs
apps/cli/src/api/: client.rs  mod.rs  types.rs
apps/cli/src/auth/: device_flow.rs  mod.rs  session.rs
apps/cli/src/cli/: banner.rs  mod.rs  output.rs  prompts.rs
apps/cli/src/commands/: checkout.rs  dev.rs  init.rs  init.ts  install_rules.rs  list_profiles.rs  listen.rs  login.rs  logout.rs  mod.rs  payments.rs  probe.rs  products.rs  quickstart.rs  refunds.rs  status.rs  switch.rs  transactions.rs  ui.rs  update.rs  webhooks_cmd.rs  whoami.rs
apps/cli/src/config/: global.rs  mod.rs
(+2606 files in other folders)
