[package]
name = "lomi-cli"
version = "3.101.1"
edition = "2021"
description = "Command line interface for lomi.'s payment infrastructure"
license = "MIT"
authors = ["lomi. <hello@lomi.africa>"]
homepage = "https://lomi.africa"
repository = "https://github.com/lomiafrica/lomi."

[[bin]]
name = "lomi"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
directories = "6.0"
futures-util = "0.3"
indicatif = "0.17"
inquire = "0.7"
open = "5.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
tokio = { version = "1.43", features = ["full"] }
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3.17"

[profile.release]
strip = true
lto = true
codegen-units = 1
